--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "posttest": "standard"
   },
   "engines": {
-    "node": ">=10.7.0",
-    "npm": ">=5.3.0"
+    "node": ">=14"
   },
   "dependencies": {
     "email-validator": "^2.0.3",
